fix: chart is not responsive

--- a/src/components/Chart/style.module.scss
+++ b/src/components/Chart/style.module.scss
@@ -1,6 +1,9 @@
 .container {
   padding-left: 30px;
   padding-right: 30px;
-  // width: 100%;
-  flex-grow: 1;
+  max-height: 500px;
+  flex: 1;
+  canvas {
+    width: 100% !important;
+  }
 }
