--- a/src/components/Sidebar/style.module.scss
+++ b/src/components/Sidebar/style.module.scss
@@ -3,7 +3,10 @@
   padding-right: 25px;
   padding-top: 20px;
   max-width: 300px;
-  flex-shrink: 0;
+  flex: 1;
+  transform: translateX(-100%);
+  transition: transform 0.6s ease;
+  transform: translateX(0);
   .menu {
     border-bottom: 2px solid #bd613c;
     margin-bottom: 30px;
